--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ base64 = "0.6"
 serde = "1.0"
 serde_derive = "1.0"
 
-chrono = "0.4"
-
 rocket = "0.3.0"
 rocket_codegen = "0.3.0"
 rocket_contrib = "0.3.0"
 
 error-chain = "0.10"
+lazy_static = "0.2"
+
+[dependencies.chrono]
+version = "0.4"
+features = ["serde"]
